crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__union__error_bare_parameter.snap
---
source: crates/nash-report/tests/parse/declaration/union.rs
assertion_line: 10
description: type Maybe a = Just a
info: diagnostic
---
nash::syntax

  × Expected `=` before the variants.
   ╭─[src/Main.nash:1:12]
 1 │ type Maybe a = Just a
   ·            ─
   ╰────
  help: Separate the datatype name and variants with `=`.
