crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__union__error_empty_representation_annotation.snap
---
source: crates/nash-report/tests/parse/declaration/union.rs
assertion_line: 15
description: "type T ('f : ) = A"
info: diagnostic
---
nash::syntax

  × Expected a representation bound.
   ╭─[src/Main.nash:1:14]
 1 │ type T ('f : ) = A
   ·              ─
   ╰────
  help: Use `Big`, `Const`, `Term`, or `Storable`.
