crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__union__error_labeled_field_without_type.snap
---
source: crates/nash-report/tests/parse/declaration/union.rs
assertion_line: 25
description: "type D = D { owner }"
info: diagnostic
---
nash::syntax

  × Expected `:` after the constructor field name.
   ╭─[src/Main.nash:1:20]
 1 │ type D = D { owner }
   ·                    ─
   ╰────
  help: Separate the field name and type with `:`.
