crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__union__error_unknown_representation_annotation.snap
---
source: crates/nash-report/tests/parse/declaration/union.rs
assertion_line: 20
description: "type T ('f : Foo) = A"
info: diagnostic
---
nash::syntax

  × Unknown representation bound `Foo`.
   ╭─[src/Main.nash:1:14]
 1 │ type T ('f : Foo) = A
   ·              ─
   ╰────
  help: Use `Big`, `Const`, `Term`, or `Storable`.
