crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__union__union_rejects_kind_arrow_annotation.snap
---
source: crates/nash-report/tests/parse/declaration/union.rs
assertion_line: 5
description: "type Fix ('f : Big -> Big) = Fix ('f (Fix 'f))"
info: diagnostic
---
nash::syntax

  × Representation bounds cannot contain arrows.
   ╭─[src/Main.nash:1:20]
 1 │ type Fix ('f : Big -> Big) = Fix ('f (Fix 'f))
   ·                    ─
   ╰────
  help: Use a bound such as `Storable`; constructor kinds are inferred.
